# manim-forge

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
manimforge/: cairo.pyi
src/: cairo.rs
